[package]
name = "envdns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.73"
clap = { version = "4.3.21", features = ["derive", "env"] }
once_cell = "1.18.0"
thiserror = "1.0.44"
tokio = { version = "1.30.0", features = ["macros", "rt-multi-thread", "net"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
trust-dns-resolver = "0.22.0"
trust-dns-server = "0.22.1"
